worked through cleaning script.js minimal progress

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             The Code Quizzer is timed! See how many questions you can answer before your time runs out!
             But be careful, every incorrect answer takes away 3 seconds from the clock!
         </p>
-        <button class="beginbtn" id="btn">Let's Begin!</button>
+        <button class="beginbtn" id="btn-begin">Let's Begin!</button>
     </div>
 
     <div id="question-section" class="hidden">
         <!-- Need your questions in this div . make this section then hide with CSS . need to have ID to modify is JS-->
         <h4 id="question">Question</h4>
        
-        <button id="btn"> Next Question! </button>
+        <button id="btn-next"> Next Question! </button>
 
     </div>
 
@@ -47,9 +47,9 @@
         <!-- Do I store high-scores here? user store-->
     </div>
 
-    <div id="high-scores" class="hidden">
-        <!-- Need your high scores in this div -->
-    </div>
+    <!-- <div id="high-scores" class="hidden">
+         Need your high scores in this div 
+    </div> -->
 
 
 
